// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel \`<Trans>\` component correctly compresses the child text node as the key 1`] = `
"export function ReactComponent() {
  const {
    t
  } = useTranslation('namespace');
  return <Headline as='h1' size='xl' textAlign='center'>
              <Trans t={t} i18nKey=\\"bb42f8\\" />
            </Headline>;
}"
`;

exports[`babel \`<Trans>\` component correctly compresses the i18nKey attribute as the key (1) 1`] = `
"export function ReactComponent() {
  const {
    t
  } = useTranslation('namespace');
  return <Headline as='h1' size='xl' textAlign='center'>
              <Trans t={t} i18nKey=\\"bb42f8\\" />
            </Headline>;
}"
`;

exports[`babel \`<Trans>\` component correctly compresses the i18nKey attribute as the key (2) 1`] = `
"export function ReactComponent() {
  const {
    t
  } = useTranslation('namespace');
  return <Headline as='h1' size='xl' textAlign='center'>
              <Trans t={t} i18nKey=\\"bb42f8\\" />
            </Headline>;
}"
`;

exports[`babel \`<Trans>\` component errors for components with variable i18nKey attribute 1`] = `"unknown: [next-i18next-compress] \`<Trans i18nKey={variable}>\` is not supported, has to be a string literal"`;

exports[`babel \`<Trans>\` component errors for components with variable spreads 1`] = `"unknown: [next-i18next-compress] \`<Trans {...variable}>\` is not supported"`;

exports[`babel \`<Trans>\` component ignores components with interpolated React components (1) 1`] = `
"export function ReactComponent() {
  const {
    t
  } = useTranslation('namespace');
  return <Headline as='h1' size='xl' textAlign='center'>
              <Trans t={t}><Link>Forgot password</Link></Trans>
            </Headline>;
}"
`;

exports[`babel \`<Trans>\` component ignores components with interpolated React components (2) 1`] = `
"export function ReactComponent() {
  const {
    t
  } = useTranslation('namespace');
  return <Headline as='h1' size='xl' textAlign='center'>
              <Trans t={t}>
                Forgot <Link>password</Link>
              </Trans>
            </Headline>;
}"
`;

exports[`babel \`<Trans>\` component ignores components with interpolated React components (3) 1`] = `
"export function ReactComponent() {
  const {
    t
  } = useTranslation('namespace');
  return <Headline as='h1' size='xl' textAlign='center'>
              <Trans t={t} i18nKey='Forgot password'>
                Forgot <Link>password</Link>
              </Trans>
            </Headline>;
}"
`;

exports[`babel \`t\` function correctly compresses the argument as the key 1`] = `
"export function ReactComponent() {
  const {
    t
  } = useTranslation('namespace');
  return <Input label={t(\\"f2488f\\")} />;
}"
`;

exports[`babel \`t\` function errors for function calls with variable arguments 1`] = `"unknown: [next-i18next-compress] \`t(variable)\` is not supported, has to be a string literal"`;

exports[`babel \`t\` function ignores function calls with no arguments 1`] = `
"export function ReactComponent() {
  const {
    t
  } = useTranslation('namespace');
  return <Input label={t()} />;
}"
`;
